--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
+
+	<link rel="stylesheet" type="text/css" href="style.css">
 <body>
 	<h1>Hi</h1>
-	<p>This is a test</p>
 </body>
 </html>
